auto-test/tests/chapter_18/invalid_types/initializers/nested_compound_initializer_too_long.c
struct inner {
    int i;
};

struct outer {
    struct inner foo;
};

int main(void) {
    struct outer x = {{1, 2}}; 
    return 0;
}